# news-mlops-free

./: .dvcignore  .env.example  .gitignore  README.md  docker-compose.yml  dvc.yaml  gunicorn_conf.py
.github/workflows/: main.yml
backend/: config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
data_pipeline/: scraper.py
docker/backend/: Dockerfile
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
ml/: categorizer.py  sentiment.py  summarizer.py  utils.py
tests/: test_api.py
